:sparkles: 优化model
